Fixed sticky component for IOS on smaller screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -267,7 +267,6 @@ a:focus{
       @supports (-webkit-overflow-scrolling: touch) {
         position: sticky;
         position: -webkit-sticky;
-        top: 40px;
       }
     }
     .wrapper{
